--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">Michael<span class="text-primary">Conti</span></h1>
-                    <div class="subheading mb-5">Charlotte, North Carolina·<a href="mailto:michaelcontiracing@gmail.com">michaelcontiracing@gmail.com</a></div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <div class="subheading mb-5">Concord, North Carolina·<a href="mailto:michaelcontiracing@gmail.com">michaelcontiracing@gmail.com</a></div>
+                    <p class="lead mb-5">2014 eNASCAR iRacing World Championship Series Champion I</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://twitter.com/mikeconti5"><i class="fab fa-twitter"></i></a><a class="social-icon" href="https://www.facebook.com/mconti5/"><i class="fab fa-facebook-f"></i></a>
                     </div>
