--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                     </div>
             </section>
             <hr class="m-0" />
+            <!-- What is iRacing-->
+            <section class="resume-section" id="iRacing">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">What is iRacing?</h2>
+                    <p>The eNASCAR iRacing World Championship Series is iRacing’s premier eSport World Championship series, officially sanctioned by NASCAR, and features the world’s most elite oval sim-racers. We compete on simulated versions of the actual real-world NASCAR tracks, with cars that are modeled to be within millimeter accuracy to their real-life counterparts.</p>
+                    </div>
+            </section>
+            <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
