--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#esports">What is Esports?</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#iracing">What is iRacing?</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
             </div>
@@ -53,7 +54,7 @@
             </section>
             <hr class="m-0" />
             <!-- What is iRacing-->
-            <section class="resume-section" id="iRacing">
+            <section class="resume-section" id="iracing">
                 <div class="resume-section-content">
                     <h2 class="mb-5">What is iRacing?</h2>
                     <p>The eNASCAR iRacing World Championship Series is iRacing’s premier eSport World Championship series, officially sanctioned by NASCAR, and features the world’s most elite oval sim-racers. We compete on simulated versions of the actual real-world NASCAR tracks, with cars that are modeled to be within millimeter accuracy to their real-life counterparts.</p>
