--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#esports">What is Esports?</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#iracing">What is iRacing?</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                 </ul>
             </div>
         </nav>
@@ -60,35 +60,15 @@
                     </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <!-- About-->
+            <section class="resume-section" id="iracing">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>1<sup>st </sup>Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>1<sup>st </sup>Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>2<sup>nd </sup>Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>1<sup>st </sup>Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>3<sup>rd </sup>Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
-                </div>
+                    <h2 class="mb-5">About</h2>
+                    <p>Michael Conti enters his second season of competition with JR Motorsports in the eNASCAR iRacing World Championship Series, fresh off a seventh-place finish in the final point standings. The 22-year-old New Jersey native has designs on finishing much higher in 2020.</p>
+                    <p>He won the 2014 eNASCAR iRacing World Championship Series title and has earned nine race victories during his time in the series. In 2019, Conti came a whisker from competing in the winner-take-all eNIWCS finale last season, eventually finishing seventh in the final point standings. Over the course of the season, Conti earned three poles, three top-five and eight top-10 finishes in 12 races, leading 308 laps.</p>
+                    </div>
             </section>
+            <hr class="m-0" />
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
