--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#background">Background</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#esports">What is Esports?</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#iracing">What is iRacing?</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                 </ul>
             </div>
         </nav>
@@ -60,10 +60,10 @@
                     </div>
             </section>
             <hr class="m-0" />
-            <!-- About-->
-            <section class="resume-section" id="iracing">
+            <!-- Background -->
+            <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">About</h2>
+                    <h2 class="mb-5">Background</h2>
                     <p>Michael Conti enters his second season of competition with JR Motorsports in the eNASCAR iRacing World Championship Series, fresh off a seventh-place finish in the final point standings. The 22-year-old New Jersey native has designs on finishing much higher in 2020.</p>
                     <p>He won the 2014 eNASCAR iRacing World Championship Series title and has earned nine race victories during his time in the series. In 2019, Conti came a whisker from competing in the winner-take-all eNIWCS finale last season, eventually finishing seventh in the final point standings. Over the course of the season, Conti earned three poles, three top-five and eight top-10 finishes in 12 races, leading 308 laps.</p>
                     </div>
