--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </section>
             <hr class="m-0" />
             <!-- Background -->
-            <section class="resume-section" id="about">
+            <section class="resume-section" id="background">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Background</h2>
                     <p>Michael Conti enters his second season of competition with JR Motorsports in the eNASCAR iRacing World Championship Series, fresh off a seventh-place finish in the final point standings. The 22-year-old New Jersey native has designs on finishing much higher in 2020.</p>
